# hello_picus

./: CMakeLists.txt  LICENSE  README.md  install_opencv_with_cuda_support.sh
cmake/: Findgpiod.cmake  libgpiod_config.h.in
src/: CMakeLists.txt  cuda_example.cpp  gpio_example.cpp  main.cpp
src/common/: gpios.cpp  gpios.h  picus_gpios.h
